<pre>
2007-xx-xx:
	* version 0.6
	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
	* improvements for scrollable -- more -- prompt
	* changed 'I' key to Ctrl-Q to also work in textboxes
	* sites like msn.com or yahoo.com don't focus search field anymore on keydown
	* new gi browser command to focus last used input box
	* edit TEXTAREAs with many vim commands in a vim and even visual mode if you :set noinsertmode
	* support for emacs/bash-like ctrl-e/a/u/k/h keys in single line text fields
	* support for * and # mappings to search for the text selection or the text under the cursor
	* Escape finally clears any selection made in the document
	* initial start of caret mode. Start with 'i', stop with Escape;
	* vimperator trys to stay in command mode after loading pages instead of having a text field focused
	* added a visual bell and replaced 'beep' with 'visualbell'
	* added vimperator logo (can be seen in the addons manager)
	* added 'hlsearch','incsearch', 'ignorecase' and 'smartcase' options
	* many small bug fixes and enhancments

2007-09-03:
	* version 0.5.1
	* native / and ? search and n and N working again
	* the URL in the status line can be selected with the mouse again
	* the Windows default RC file is now ~/_vimperatorrc and the plugin
	  directory is ~/vimperator/plugin
	* commandline history now works properly on Windows
	* filename completion now works on Windows
	* the Bookmarks Toolbar Folder is now read when bookmarks are first
	  loaded - it was skipped entirely in the past
	* fixed search for :open (previously needed to do :o <tab> ONCE to
	  initialize them)
	* added :set {option}! support to toggle a boolean option's value
	* added :set all and :set all& support to show the current value of all
	  options and to reset all options to their default value
	* :tabmove! wrapping works again

2007-08-16:
	* version 0.5
	* :map support (also :noremap, :unmap)
	* :bmarks and :history now use the multiline message window for output