@@ -2,6 +2,10 @@
 2007-xx-xx:
 	* version 0.6
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
+	* added 'hlsearchstyle' option to allow for user CSS styling of the
+	  highlighted text strings when 'hlsearch' is set
+	* added 'linksearch' option to restrict page searches to link text - \U
+	  and \u can be used in the search pattern to override 'linksearch'
 	* improvements for scrollable -- more -- prompt
 	* changed 'I' key to Ctrl-Q to also work in textboxes
 	* sites like msn.com or yahoo.com don't focus search field anymore on keydown
